# zipnerf-pytorch

./: .gitignore  README.md  environment.yaml  eval.py  extract.py  pyproject.toml  render.py  requirements.txt  train.py  tsdf.py
configs/: 360.gin  360_glo.gin  blender.gin  blender_256.gin  blender_refnerf.gin  llff_256.gin  llff_raw.gin  multi360.gin
extensions/: __init__.py  backend.py
extensions/cuda/: setup.py
extensions/cuda/src/: bindings.cpp  pdf.cu  pdf.h
extensions/dpcpp/: Makefile  bindings.cpp  gridencoder.dp.cpp  rays.cpp
extensions/dpcpp/include/: gridencoder.h  rays.h
gridencoder/: grid.py
internal/: camera_utils.py  checkpoints.py  configs.py  coord.py  datasets.py  geopoly.py  image.py  math.py  models.py  raw_utils.py  ref_utils.py  render.py  stepfun.py  train_utils.py  utils.py  vis.py
internal/pycolmap/pycolmap/: scene_manager.py
scripts/: concat_videos.py  eval_360.sh  eval_360_all.sh  extract.sh  extract_360.sh  extract_360_all.sh  extract_360_tsdf.sh  extract_360_tsdf_all.sh  extract_blender_all.sh  local_colmap_and_resize.sh  render_360.sh  render_360_all.sh  set_dpcpp_env.sh  train_360.sh  train_360_all.sh  train_360_glo.sh  train_360_glo_all.sh  train_blender.sh  train_blender_all.sh  train_multi360.sh  train_multi360_all.sh
zipnerf_ns/: __init__.py  zipnerf_config.py  zipnerf_datamanager.py  zipnerf_model.py  zipnerf_pipeline.py
